# agentBattle

./: .dockerignore  .env  AGENT_BATTLE_BLOG_POST.md  Anchor.toml  BALANCE_TRACKING_SUMMARY.md  CROSS_CHAIN_SETUP.md  DEPENDENCIES.md  Dockerfile  Dockerfile.solana  EVOLUTION_VISUALIZATION_README.md  IMPORT_FIX_SUMMARY.md  INCREMENTAL_EVOLUTION_SUMMARY.md  README.md  SOLANA_PRIZE_POOL_TEST_SUMMARY.md  agentInvoker.js  analyzeCurrentSystem.js  api.js  backupGameData.js  balance_timeline_2025-05-30T16-08-31-897Z.csv  balance_timeline_2025-05-30T17-15-53-154Z.csv  bankruptcy_progress_g1_2025-06-03T17-28-28-620Z.json  bankruptcy_progress_g1_2025-06-03T17-29-22-783Z.json  bridgeUtils.js  checkPoolAuthority.js  claim_architecture.md  createProgramTokenAccount.js  createReservePools.js  database.js  deployed_program_data.json  enhanced_evolution_2025-06-02T20-49-26-808Z.json  eventLogger.js  evolutionWebSocketServer.js  evolution_report_2025-05-30T14-05-07-981Z.md  evolution_report_2025-05-30T15-46-06-968Z.md  evolution_report_2025-05-30T16-01-39-124Z.md  evolution_report_2025-05-30T16-08-31-895Z.md  evolution_report_2025-05-30T17-15-53-153Z.md  evolution_report_2025-06-01T20-09-06-136Z.md  evolution_results.txt  evolutionaryStrategies.js  (+178 more)
abt-token/: .gitignore  README.md  deploy.js  hardhat.config.js  package-lock.json  package.json  prizepool.json
api/: claim-abt.js  claim-spl.js  evolutionController.js  gameState.js  games.js  leaderboard.js
architecture_and_design/: AIAgentSystem.md  (+9 more)
programs/solana_prize_pool/: Cargo.toml
programs/solana_prize_pool/src/: lib.rs
(+219 files in other folders)
